--- a/portfolio-frontend/package.json
+++ b/portfolio-frontend/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.552.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-circular-progressbar": "^2.1.0",
@@ -37,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.14"
   }
 }
